--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^6.7.2",
     "net": "^1.0.2",
     "next": "^13.0.3",
+    "next-absolute-url": "^1.2.2",
     "next-cookies": "^2.0.3",
     "popper.js": "^1.16.1",
     "react": "18.2.0",
