--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@rematch/core": "^2.2.0",
+    "@rematch/loading": "^2.1.2",
     "@tailwindcss/typography": "^0.5.7",
     "@types/draft-js": "^0.11.9",
     "@types/js-cookie": "^3.0.2",
@@ -24,6 +26,7 @@
     "datatables.net": "^1.13.1",
     "draft-js": "^0.11.7",
     "draftjs-utils": "^0.10.2",
+    "echarts": "^5.4.0",
     "framer-motion": "^6.5.1",
     "jotai": "^1.8.4",
     "jquery": "^3.6.1",
@@ -43,6 +46,7 @@
     "react-idle-timer": "^5.4.2",
     "react-images-uploading": "^3.1.7",
     "react-ion-icon": "^4.0.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.1",
     "react-spinners": "^0.13.6",
     "react-tidy": "^1.3.6",
