--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@rematch/core": "^2.2.0",
     "@rematch/loading": "^2.1.2",
+    "@rematch/persist": "^2.1.2",
     "@tailwindcss/typography": "^0.5.7",
     "@types/draft-js": "^0.11.9",
     "@types/js-cookie": "^3.0.2",
