--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-select": "^1.13.18",
     "chart.js": "^3.9.1",
+    "cookies-next": "^2.1.1",
     "datatables.net": "^1.13.1",
     "draft-js": "^0.11.7",
     "draftjs-utils": "^0.10.2",
