--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "next-cookies": "^2.0.3",
     "popper.js": "^1.16.1",
     "react": "18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^2.6.0",
+    "react-bootstrap-typeahead": "^6.0.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
