--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-idle-timer": "^5.4.2",
     "react-images-uploading": "^3.1.7",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-ion-icon": "^4.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.1",
     "react-spinners": "^0.13.6",
     "react-tidy": "^1.3.6",
+    "react-virtuoso": "^3.1.5",
     "redux": "^4.2.0",
     "sass": "^1.55.0",
     "slugify": "^1.6.5",
