--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@golojan/bootstrap-breakpoints": "^1.0.7",
     "@rematch/core": "^2.2.0",
     "@rematch/loading": "^2.1.2",
     "@rematch/persist": "^2.1.2",
     "@tailwindcss/typography": "^0.5.7",
+    "@types/cheerio": "^0.22.31",
     "@types/draft-js": "^0.11.9",
     "@types/js-cookie": "^3.0.2",
     "@types/mongoose": "^5.11.97",
+    "axios": "^1.2.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.4.1",
     "bootstrap-select": "^1.13.18",
     "chart.js": "^3.9.1",
+    "cheerio": "^1.0.0-rc.12",
+    "chrome-aws-lambda": "^10.1.0",
     "cookies-next": "^2.1.1",
     "datatables.net": "^1.13.1",
     "draft-js": "^0.11.7",
@@ -39,6 +44,8 @@
     "next-absolute-url": "^1.2.2",
     "next-cookies": "^2.0.3",
     "popper.js": "^1.16.1",
+    "pretty": "^2.0.0",
+    "puppeteer": "^19.3.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-bootstrap-typeahead": "^6.0.0",
