--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "draftjs-utils": "^0.10.2",
     "echarts": "^5.4.0",
     "framer-motion": "^6.5.1",
+    "install": "^0.13.0",
     "jquery": "^3.6.1",
     "js-cookie": "^3.0.1",
     "jsdom": "^20.0.2",
@@ -43,6 +44,7 @@
     "next": "^13.0.3",
     "next-absolute-url": "^1.2.2",
     "next-cookies": "^2.0.3",
+    "npm": "^9.2.0",
     "popper.js": "^1.16.1",
     "pretty": "^2.0.0",
     "puppeteer": "^19.3.0",
@@ -52,6 +54,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-hot-toast": "^2.4.0",
     "react-idle-timer": "^5.4.2",
     "react-images-uploading": "^3.1.7",
     "react-infinite-scroll-component": "^6.1.0",
@@ -64,6 +67,7 @@
     "redux": "^4.2.0",
     "sass": "^1.55.0",
     "slugify": "^1.6.5",
+    "swr": "^2.0.0",
     "upload-js": "^2.2.1"
   },
   "devDependencies": {
