--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chrome-aws-lambda": "^10.1.0",
     "cookies-next": "^2.1.1",
     "datatables.net": "^1.13.1",
+    "dotenv": "^16.0.3",
     "draft-js": "^0.11.7",
     "draftjs-utils": "^0.10.2",
     "echarts": "^5.4.0",
